# bpfjit-netbsd

./: CMakeLists.txt  LICENSE  Makefile  README.md  bpfjit-config.cmake.in  update.sh
.github/workflows/: ci.yml  weekly.yml
cmake/: FindSljit.cmake
patches/: bpf.h.patch  bpfjit.c.patch  bpfjit.h.patch
src/net/: bpf.h  bpfjit.c  bpfjit.h
test/: main.c  pcap-helpers.c  pcap-helpers.h  test-with-pcap.c  test.c
